--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
 </head>
 
 <body>
-    <header>
-        <img src="./logo e 2/logo.alas.e2.png" alt="logo.alas" class="logo-alas"/>
+    <header class="header">
+        <div class="img-nombre">
+            <img class="logo-alas" src="./logo e 2/87fabfeab4b01aa3d5338bf1c0c67fe6-2-alas-logo-abiertas-02.png" alt="logo.alas" >
+            <p class="nombre-logo">North Resort </p>
+        </div>
         <nav class="nav">
-            <ul class="lis">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Suites</a>
-                </li>
-                <li>
-                    <a href="#">Reservas</a>
-                </li>
-                <li>
-                    <a href="#">Ubicación</a>
-                </li>
+            <ul>
+                <li><a class="a-lis-nav" href="#">Home</a></li>
+                <li><a class="a-lis-nav" href="#">Suites</a></li>
+                <li><a class="a-lis-nav" href="#">Reservas</a></li>
+                <li><a class="a-lis-nav" href="#">Ubicación</a></li>
             </ul>
         </nav>
     </header>
