--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 <body>
     <header class="header">
-        <div class="img-nombre">
-            <img class="logo-alas" src="./logo e 2/87fabfeab4b01aa3d5338bf1c0c67fe6-2-alas-logo-abiertas-02.png" alt="logo.alas" >
-            <p class="nombre-logo">North Resort </p>
-        </div>
+        <img src="./img-tp-nft/logo-nr.png" alt="Logo NR" >
         <nav class="nav">
             <ul>
                 <li><a class="a-lis-nav" href="#">Home</a></li>
@@ -24,6 +21,35 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="section-1" >
+            <div class="h1-p-span" >
+                <div class="div-h1-p">
+                    <h1>North Resort</h1>
+                    <p>Un complejo que cuenta con un Hotel completo y amplio,
+                       las mejores habitaciones y suites premium, aprovechando
+                       todas sus dimensiones podemos encontrarnos con diversos 
+                       entretenimientos y/o actividades. Jacuzzi interior, Piscina,
+                       Gimnasio y Parque de juegos para los mas chicos 
+                    </p>
+                </div>
+                <div class="reserv-punt" >                    
+                    <a class="a-reserv-punt" href="#">Reservar</a>
+                    <a class="a-reserv-punt" href="#">Puntúanos</a>
+                </div>
+            </div>
+            <img src="./img-tp-nft/resort.jpg" alt="Resort">
+
+        </section>
+        <section>
+            <p>
+                En North Resort garantizamos poder brindarle la mejor calidad de
+                 confort, avalado por nuestros cientes a lo largo 30 años.
+            </p>
+            
+        </section>
+
+    </main>
 </body>
 
 </html>
